full commit of a finished site that should work

--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<title>Petr Lizunov ART 101 Dir</title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-
+	<h2>Petr Lizunov's ART101 Labs Directory:</h2>
+	<div class="assignments major-section">
+		<ul>
+			<li><a href="lab2/index.html">Lab 2: The First HTML</a></li>
+			<li><a href="lab3/index.html">Lab 3: File Structure and Transfer</a></li>
+			<li><a href="lab4/">Lab 4: File Transfer</a></li>
+			<li><a href="lab5/">Lab 5:</a></li>
+			<li><a href="lab6/">Lab 6:</a></li>
+		</ul>
+	</div>
 </body>
 </html>
