--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<title>Lab 3 - File Structures and Transfer </title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
-<body>
-
-</body>
+	<div id="main">
+		<body>
+				<h1>This page was authored by Petr Lizunov for Lab 3 - File Structure</h1>
+				<img src="../img/pfps.jpg">
+				 	<p>This lab is all about creating the structure for your work to exist in and navigate through. This is the foundation of all of the work for the rest of the class.</p>
+				<h2>Challenges</h2>
+				<p>There weren't any big challenges since the bonus task of Lab 2 and the provided example structure for lab 1 were pretty straightforward and easy. The only problem was that my partner checked out so I had to complete the lab alone. </p>
+				<h2>Results</h2>
+				<p>Here are some screenshots to document my work:</p>
+				<img src="img/scr1.png">
+				<h3>File Structure</h3>
+				<img src="img/scr2.png">
+				<h3>Lab 3 Index.html code</h3>
+				<img src="img/scr3.png">
+				<h3>Main directory Index.html code</h3>
+  	 </body>
+	</div>
 </html>
