--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<h2>Petr Lizunov's ART101 Labs Directory:</h2>
+	<img id="face" src="img/pfps.jpg">
 	<div class="assignments major-section">
 		<ul>
 			<li><a href="lab2/index.html">Lab 2: The First HTML</a></li>
