--- a/lab3/index.html
+++ b/lab3/index.html
@@ -7,7 +7,8 @@
 	<div id="main">
 		<body>
 				<h1>This page was authored by Petr Lizunov for Lab 3 - File Structure</h1>
-				<img src="../img/pfps.jpg">
+				<p><a href="../index.html">BACK TO DIRECTORY</a></p>
+				<img id="face" src="../img/pfps.jpg">
 				 	<p>This lab is all about creating the structure for your work to exist in and navigate through. This is the foundation of all of the work for the rest of the class.</p>
 				<h2>Challenges</h2>
 				<p>There weren't any big challenges since the bonus task of Lab 2 and the provided example structure for lab 1 were pretty straightforward and easy. The only problem was that my partner checked out so I had to complete the lab alone. </p>
