--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Petr Lizunov ART 101 Dir</title>
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<link rel="stylesheet" type="text/css" href="css/site.css">
 </head>
 <body>
 	<h2>Petr Lizunov's ART101 Labs Directory:</h2>
