complete site hopefully

--- a/lab5/index.html
+++ b/lab5/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<title>Lab 5 - JavaScript </title>
+	<link rel="stylesheet" type="text/css" href="css/site.css">
 </head>
-<body>
-
-</body>
+	<div id="main">
+		<body>
+				<h1>This page was authored by Petr Lizunov for Lab 5 - Java Script</h1>
+				<p><a href="../index.html">BACK TO DIRECTORY</a></p>
+				 	<p>This lab is about creating JavaScript code and implementing it intot he website structure</p>
+				<h2>Challenges</h2>
+				<p>This lab presented little challenge considering that we went over this material during lecture and sections. I am, however, looking forward to trying to use these skills creatively which will definitely be a challenge. </p>
+				<h2>Results</h2>
+				<p>Here are the results of my Java Script code implemented on this page:</p>
+				<h3>Script Output</h3>
+				<div id="output">
+					<script type="text/javascript" src="js/lab.js"></script>
+				</div>
+				<img id="car" src="img/jetta.jpg">
+  	 </body>
+	</div>
 </html>
