complete lab 4 and correct the entry in the directory index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<ul>
 			<li><a href="lab2/index.html">Lab 2: The First HTML</a></li>
 			<li><a href="lab3/index.html">Lab 3: File Structure and Transfer</a></li>
-			<li><a href="lab4/index.html">Lab 4: File Transfer</a></li>
+			<li><a href="lab4/index.html">Lab 4: PseudoCoding</a></li>
 			<li><a href="lab5/index.html">Lab 5: Java Script</a></li>
 			<li><a href="lab6/">Lab 6:</a></li>
 		</ul>
