--- a/lab4/index.html
+++ b/lab4/index.html
@@ -1,11 +1,75 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<title>Lab 4 - Pseudocoding </title>
+	<link rel="stylesheet" type="text/css" href="css/site.css">
 </head>
-<body>
+	<div id="main">
+		<body>
+				<h1>This page was authored by Petr Lizunov for Lab 4 - PseudoCoding and Problem-solving</h1>
+				<p><a href="../index.html">BACK TO DIRECTORY</a></p>
+				 	<p>This lab is intended to develop critical thinking and breakdown of larger tasks into smaller tasks that is essential for programming</p>
+				<h2>Challenges</h2>
+				<p>This lab presented little challenge considering that we went over this material during lecture and sections. I am, however, looking forward to trying to use these skills creatively which will definitely be a challenge. </p>
+				<h2>Results</h2>
+				<p>Here are my lists presented as both HTML lists and commented JavaScript Code</p>
+				<h3>How do you write instructions? - Provided list</h3>
+				<p id="bold">=Writing your instructions</p>
+				<ul>
+					<li>1. Divide the task into baby steps. Each step should have a single action, not several</li>
+					<li>2. Start each step with an action word</li>
+					<li>3. Follow a logical progression</li>
+					<li>4. Choose your words carefully</li>
+					<li>5. Use positive actions</li>
+					<li>6. Write in second person</li>
+					<li>7. Include alternatives</li>
+					<li>8. Use graphics where helpful</li>
+				</ul>
+				<h3>And here is the same list in code format, how it would be commented out in a Java Script document</h3>
+<pre>
+<code>
+/*
+* 1. Divide the task into baby steps. Each step should have a single action, not several
+* 2. Start each step with an action word
+* 3. Follow a logical progression
+* 4. Choose your words carefully
+* 5. Use positive actions
+* 6. Write in second person
+* 7. Include alternatives
+* 8. Use graphics where helpful
+*/
+</code>
+</pre>
 
-</body>
+<h3>Completing a lap in a racing game - List created by me</h3>
+<ul>
+	<li>1. Start at the beginnign of the lap</li>
+	<li>2. Race to the finish line</li>
+	<li id="subtask">2a. Avoid opponents, if there are any</li>
+	<li id="subtask">2b. Complete proper turns</li>
+	<li id="subtask">2c. Maintain first place</li>
+	<li>3. Cross the finish line</li>
+	<li id="subtask">3a. Check for validity of players path throughout the race</li>
+	<li id="subtask">3b. Check the players position in the race compared to opponents</li>
+	<li>4. If player finished 3rd, 2nd or 1st, issue congratulations</li>
+</ul>
+<h3>And here is the same list in code format, how it would be commented out in a Java Script document</h3>
+<pre>
+<code>
+/*
+* 1. Start at the beginnign of the lap
+* 2. Race to the finish line
+** 2a. Avoid opponents, if there are any
+** 2b. Complete proper turns
+** 2c. Maintain first place
+* 3. Cross the finish line
+** 3a. Check for validity of players path throughout the race
+** 3b. Check the players position in the race compared to opponents
+* 4. If player finished 3rd, 2nd or 1st, issue congratulations
+*/
+</code>
+</pre>
+
+  	 </body>
+	</div>
 </html>
