all the lab 6 work and changes to publish

--- a/lab6/index.html
+++ b/lab6/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<title>Lab 6 - Arrays and Objects </title>
+	<link rel="stylesheet" type="text/css" href="css/site.css">
 </head>
-<body>
-
-</body>
+	<div id="main">
+		<body>
+				<h1>This page was authored by Petr Lizunov for Lab 6 - Arrays and Objects</h1>
+				<p><a href="../index.html">BACK TO DIRECTORY</a></p>
+				 	<p>This lab is about creating JavaScript code for arrays and objects, then displaying it within an HTML page</p>
+				<h2>Challenges</h2>
+				<p>This lab has presented some new syntax to learna dn some new applications and declaration of objects. It was definitely helpful teaming up with a person who knows something about JAvaScript and picking up new syntax from them. </p>
+				<h2>Results</h2>
+				<p>Here are the results of my Java Script code implemented on this page:</p>
+				<h3>Script Output</h3>
+				<div id="output">
+					<script type="text/javascript" src="js/lab.js"></script>
+				</div>
+				<img id="car" src="img/jetta.jpg">
+  	 </body>
+	</div>
 </html>
