--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<li><a href="lab3/index.html">Lab 3: File Structure and Transfer</a></li>
 			<li><a href="lab4/index.html">Lab 4: PseudoCoding</a></li>
 			<li><a href="lab5/index.html">Lab 5: Java Script</a></li>
-			<li><a href="lab6/">Lab 6:</a></li>
+			<li><a href="lab6/index.html">Lab 6: Arrays and Objects</a></li>
 		</ul>
 	</div>
 </body>
