--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			<li><a href="lab4/index.html">Lab 4: PseudoCoding</a></li>
 			<li><a href="lab5/index.html">Lab 5: Java Script</a></li>
 			<li><a href="lab6/index.html">Lab 6: Arrays and Objects</a></li>
+			<li><a href="lab7/index.html">Lab 7: Functions</a></li>
 		</ul>
 	</div>
 </body>
