--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			<li><a href="lab5/index.html">Lab 5: Java Script</a></li>
 			<li><a href="lab6/index.html">Lab 6: Arrays and Objects</a></li>
 			<li><a href="lab7/index.html">Lab 7: Functions</a></li>
+			<li><a href="lab8/index.html">Lab 8: Anon Functions</a></li>
 		</ul>
 	</div>
 </body>
