--- a/lab10/index.html
+++ b/lab10/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-	<title>Lab 9 - JS for the Web </title>
+	<title>Lab 10 - JS Events and Forms </title>
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 	<script src="js/lab.js" defer></script>
 
