--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<li><a href="lab9/index.html">Lab 9: JS for the Web</a></li>
 			<li><a href="lab10/index.html">Lab 10: JS Events and Forms</a></li>
 			<li><a href="lab11/index.html">Lab 11 - JS Libraries and jQuery</a></li>
+			<li><a href="lab12/index.html">Lab 12 - Conditionals</a></li>
 		</ul>
 	</div>
 </body>
