full bonus tasks

--- a/lab13/index.html
+++ b/lab13/index.html
@@ -30,9 +30,15 @@
 				<div class="input-output">
 
 					<h2>Fizz, Buzz, Boom!</h2>
+					<p>Please enter 4 pairs of factors and the words that they would print:</p>
+					<p><pre id="this"> Factor:         Prints Word:</pre></p>
+					<input type="number" id="inputf1"> <input type="text" id="inputw1"><br>
+					<input type="number" id="inputf2"> <input type="text" id="inputw2"><br>
+					<input type="number" id="inputf3"> <input type="text" id="inputw3"><br>
+					<input type="number" id="inputf4"> <input type="text" id="inputw4"><br>
 
-					<p>Please enter the maximum number to use for counting:
-					<input type="number" id="input">
+					<p>Please enter the maximum number to use for counting:<br>
+					<input type="number" id="inputMax">
 
 					<button id="button">Run</button></p>
 
