attempt at lab 16

--- a/lab16/index.html
+++ b/lab16/index.html
@@ -3,9 +3,10 @@
 
 <head>
 
-	<title>Lab 14 - Debugging </title>
+	<title>Lab 16 - Debugging </title>
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 	<script src="js/lab.js" defer></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
 </head>
 
@@ -13,15 +14,18 @@
 
 		<body>
 
-				<h1>This page was authored by Petr Lizunov for Lab 14 - Debugging</h1>
+				<h1>This page was authored by Petr Lizunov for Lab 16 - JSON</h1>
 				<p><a href="../index.html">BACK TO DIRECTORY</a></p>
-				 	<p>This lab is designed to revisit the old lab assignments and to correct them accordingly.</p>
+				 	<p>This lab is designed to use AJAX to collect JSON data froma  remote server.</p>
 
 				<h2>Challenges</h2>
-				<p>This lab was kind of empty for me because I haven't had any labs that needed resubmitting outside of some extra tasks.</p>
+				<p>This lab was the most challenging of all labs so far just because of an introduction of a new concept like JSON, but otherwise it was pretty easy to wrap my head around since it was already based on a concept that we have already explored in this class.</p>
 
 				<h2>Results</h2>
-				<p>The results of this laba re recorded in the PDF that was submitted for <a href="https://canvas.ucsc.edu/courses/39790/assignments/204001">lab 14</a></p>
+				<p>The result of this lab is a random comic from XKCD API that will be shown to you upon pressing this button: <button id="button">Click me!</button></a></p>
+
+				<div id="output">
+				</div>
 
   	 </body>
 
