--- a/lab16/index.html
+++ b/lab16/index.html
@@ -24,6 +24,7 @@
 				<h2>Results</h2>
 				<p>The result of this lab is a random comic from XKCD API that will be shown to you upon pressing this button: <button id="button">Click me!</button></a></p>
 
+				<h2 id="title"></h2>
 				<div id="output">
 				</div>
 
