--- a/lab16/index.html
+++ b/lab16/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-	<title>Lab 16 - Debugging </title>
+	<title>Lab 16 - JSON and APIs </title>
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 	<script src="js/lab.js" defer></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -22,7 +22,7 @@
 				<p>This lab was the most challenging of all labs so far just because of an introduction of a new concept like JSON, but otherwise it was pretty easy to wrap my head around since it was already based on a concept that we have already explored in this class.</p>
 
 				<h2>Results</h2>
-				<p>The result of this lab is a random comic from XKCD API that will be shown to you upon pressing this button: <button id="button">Click me!</button></a></p>
+				<p>The result of this lab is a comic from XKCD API that will be shown to you upon pressing this button: <button id="button">Click me!</button></a></p>
 
 				<h2 id="title"></h2>
 				<div id="output">
